Criado através do Colab

--- a/Aula_PA Colab/AulaPA2.ipynb
+++ b/Aula_PA Colab/AulaPA2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNEH8ipPvn9NsrDZgcJVlxG",
+      "authorship_tag": "ABX9TyN1F/sPp6B3TfKh+ArOP0BX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -335,16 +335,49 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6jEFvrq252fu",
-        "outputId": "dd331562-622d-4685-dfd1-4686a71da3ce"
+        "outputId": "3f3e826d-8bf7-441e-a2ad-6126bee74178"
       },
-      "execution_count": 162,
+      "execution_count": 168,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "digite o lado do quadrado5\n",
-            "a área do quadrado é 25.0 cm2\n"
+            "digite o lado do quadrado45\n",
+            "a área do quadrado é 2025.0 cm2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Calculadora\n",
+        "\n",
+        "##Entrada\n",
+        "num1 = float(input(\"Digite o primeiro número\"))\n",
+        "num2 = float(input(\"digite o segundo número\"))\n",
+        "##Processamento\n",
+        "resultado = num1 + num2\n",
+        "##saída\n",
+        "print(\"a soma dos números é igual á\",resultado)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dZJFW1mb-DTT",
+        "outputId": "79f731be-2a0a-46d1-f3e8-42b050b4c6d5"
+      },
+      "execution_count": 171,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite o primeiro número327\n",
+            "digite o segundo número173\n",
+            "a soma dos números é igual á 500.0\n"
           ]
         }
       ]
